# fast-lio2

./: .gitignore  CLAUDE.md  fastlio_jazzy.patch  kill_sim.sh  start_sim.sh  进度.md  需求.md
scripts/: drive.sh  drive_bash.sh  drive_control.py  gen_world.py  multi_image_view.py
src/FAST_LIO_ROS2/: CMakeLists.txt
src/FAST_LIO_ROS2/rviz/: fastlio.rviz
src/FAST_LIO_ROS2/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
src/fastlio_sim/: CMakeLists.txt  package.xml
src/fastlio_sim/config/: gz_bridge.yaml  velodyne.yaml
src/fastlio_sim/launch/: sim_mapping.launch.py
src/fastlio_sim/worlds/: ball_robot.sdf
src/livox_ros_driver2/: CMakeLists.txt  package.xml
src/livox_ros_driver2/include/livox_ros_driver2/msg/: custom_msg.hpp
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/config/: fastlio_params.yaml  gz_bridge.yaml
src/robot_bringup/launch/: sim.launch.py
src/robot_bringup/worlds/: ball_robot.sdf  mapping_world.sdf
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/config/: nav2_params.yaml  slam_toolbox.yaml
src/robot_navigation/launch/: mapping.launch.py  navigation.launch.py
src/robot_navigation/scripts/: activate_nav2.sh  auto_explorer  cloud_to_scan.py  test_nav2.py
src/robot_vision/: package.xml  setup.py
src/robot_vision/launch/: fusion.launch.py  yolo_detect.launch.py
src/robot_vision/robot_vision/: camera_info_publisher.py  cmd_vel_relay.py  lidar_camera_fusion.py  yolo_detector.py
