<?xml version="1.0"?>
<package format="3">
  <name>fastlio_sim</name>
  <version>0.1.0</version>
  <description>Gazebo simulation environment for FAST-LIO2</description>
  <maintainer email="c@robot.local">c</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>fast_lio</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
