<?xml version="1.0"?>
<package format="3">
  <name>livox_ros_driver2</name>
  <version>0.0.1</version>
  <description>Stub for Gazebo sim</description>
  <maintainer email="user@robot.local">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
