<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.2.0</version>
  <description>Robot bringup — launch files, Gazebo worlds, sensor bridge config, and parameters for simulation and real robot</description>
  <maintainer email="talent2397@gmail.com">talent2397</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>fast_lio</exec_depend>
  <exec_depend>robot_navigation</exec_depend>
  <exec_depend>robot_vision</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
