<?xml version="1.0"?>
<package format="3">
  <name>robot_navigation</name>
  <version>0.1.0</version>
  <description>Autonomous navigation — Nav2 config, slam_toolbox, explore, and task state machine</description>
  <maintainer email="talent2397@gmail.com">talent2397</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>nav2_explore_lite</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
