<?xml version="1.0"?>
<package format="3">
  <name>robot_vision</name>
  <version>0.1.0</version>
  <description>Vision-based object detection — YOLOv8 detector, color recognition, LiDAR-camera 3D localization</description>
  <maintainer email="talent2397@gmail.com">talent2397</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>
